--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -2,7 +2,7 @@
 
 $color--bg: #FCFCFC;
 $color--bg--secondary: #FFF;
-$color--primary: #f3ebe0;
+$color--primary: #a4c1ce;
 $color--font: #272828;
 $color--font--light: lighten($color--font, 10);
 
