--- a/src/view/index.html
+++ b/src/view/index.html
@@ -12,6 +12,7 @@
     <a href="/" class="nav__item nav__item--acitve">Home</a>
     <a href="#tasks" class="nav__item">Tasks</a>
     <a href="#homework" class="nav__item">Homework</a>
+    <a href="project1/index.html" class="nav__item">Project 1</a>
   </nav>
   <header class="header">
     <img src="../assets/me.jpeg" class="header__me" alt="Me">
@@ -23,14 +24,27 @@
       <a href="tasks/week1/task1.html" class="weeks__week">
         <h3>Week 1</h3>
       </a>
+      <a href="tasks/week2/index.html" class="weeks__week">
+        <h3>Week 2</h3>
+      </a>
+      <a href="tasks/week3/index.html" class="weeks__week">
+        <h3>Week 3</h3>
+      </a>
     </section>
     <h2 id="homework">Homework</h2>
     <section class="weeks">
-      <div class="weeks__week">
-        <a href="#" class="weeks__week">
-          <h3>Week 1</h3>
-        </a>
-      </div>
+      <a href="tasks/week1/task1.html" class="weeks__week">
+        <h3>Week 1</h3>
+      </a>
+      <a href="tasks/week2/index.html" class="weeks__week">
+        <h3>Week 2</h3>
+      </a>
+      <a href="homework/week3/index.html" class="weeks__week">
+        <h3>Week 3.1</h3>
+      </a>
+      <a href="homework/week3_2/index.html" class="weeks__week">
+        <h3>Week 3.2</h3>
+      </a>
     </section>
   </main>
 </body>
