--- a/src/scss/partials/_header.scss
+++ b/src/scss/partials/_header.scss
@@ -3,6 +3,7 @@
   padding-top: $spacing--base*2;
   text-align: center;
   &__me {
+    border: 5px solid $color--primary;
     border-radius: 50%;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   }
