--- a/src/view/index.html
+++ b/src/view/index.html
@@ -30,6 +30,12 @@
       <a href="tasks/week3/index.html" class="weeks__week">
         <h3>Week 3</h3>
       </a>
+      <a href="tasks/week4/shop.html" class="weeks__week">
+        <h3>Week 4.1</h3>
+      </a>
+      <a href="tasks/week4_2/ShoppingCart.html" class="weeks__week">
+        <h3>Week 4.2</h3>
+      </a>
     </section>
     <h2 id="homework">Homework</h2>
     <section class="weeks">
@@ -44,6 +50,9 @@
       </a>
       <a href="homework/week3_2/index.html" class="weeks__week">
         <h3>Week 3.2</h3>
+      </a>
+      <a href="homework/week4/index.html" class="weeks__week">
+        <h3>Week 4</h3>
       </a>
     </section>
   </main>
