--- a/src/view/index.html
+++ b/src/view/index.html
@@ -36,6 +36,12 @@
       <a href="tasks/week4_2/ShoppingCart.html" class="weeks__week">
         <h3>Week 4.2</h3>
       </a>
+      <a href="tasks/week5/index.html" class="weeks__week">
+        <h3>Week 5.1</h3>
+      </a>
+      <a href="tasks/week5/gradient.html" class="weeks__week">
+        <h3>Week 5.2</h3>
+      </a>
     </section>
     <h2 id="homework">Homework</h2>
     <section class="weeks">
@@ -53,6 +59,9 @@
       </a>
       <a href="homework/week4/index.html" class="weeks__week">
         <h3>Week 4</h3>
+      </a>
+      <a href="homework/week5/cat.html" class="weeks__week">
+        <h3>Week 5</h3>
       </a>
     </section>
   </main>
