--- a/src/view/index.html
+++ b/src/view/index.html
@@ -42,6 +42,9 @@
       <a href="tasks/week5/gradient.html" class="weeks__week">
         <h3>Week 5.2</h3>
       </a>
+      <a href="tasks/week6/index.html" class="weeks__week">
+        <h3>Week 6</h3>
+      </a>
     </section>
     <h2 id="homework">Homework</h2>
     <section class="weeks">
@@ -62,6 +65,9 @@
       </a>
       <a href="homework/week5/cat.html" class="weeks__week">
         <h3>Week 5</h3>
+      </a>
+      <a href="homework/week6/index.html" class="weeks__week">
+        <h3>Week 6</h3>
       </a>
     </section>
   </main>
