--- a/src/view/project1/style.scss
+++ b/src/view/project1/style.scss
@@ -14,6 +14,12 @@ body {
   padding: 1rem;
 }
 
+code {
+  background-color: #DDD;
+  padding: .1rem;
+  border-radius: 3px;
+}
+
 .ad1 {
   position: relative;
   height: 200px;
