--- a/src/scss/partials/_navigation.scss
+++ b/src/scss/partials/_navigation.scss
@@ -7,8 +7,22 @@
     display: inline-block;
     text-decoration: none;
     border-bottom: 5px solid transparent;
+    cursor: pointer;
     &:hover, &--acitve {
       border-color: $color--primary;
+    }
+    ul {
+      display: none;
+      position: absolute;
+      background-color: #FFF;
+      z-index: 1;
+      list-style-type: none;
+      padding: 0;
+      margin-left: -$spacing--base;
+      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+      .nav__item {
+        border: none;
+      }
     }
   }
 }
