--- a/src/view/homework/week9/index.html
+++ b/src/view/homework/week9/index.html
@@ -9,12 +9,13 @@
   crossorigin="anonymous"></script>
 </head>
 <body>
+  <h1>Weather</h1>
   <form id="searchForm">
     <input type="text" id="searchInput" placeholder="city name">
     <button type="submit" id="search">Search</button>
   </form>
-  <h1 id="weather">
-  </h1>
+  <h2 id="weather">
+  </h2>
   <script>
     function render() {
       const city = $('#searchInput').val();
