--- a/src/view/index.html
+++ b/src/view/index.html
@@ -56,6 +56,9 @@
       <a href="tasks/week6/index.html" class="weeks__week">
         <h3>Week 6</h3>
       </a>
+      <a href="tasks/week11/index.html" class="weeks__week">
+        <h3>Week 11</h3>
+      </a>
     </section>
     <h2 id="homework">Homework</h2>
     <section class="weeks">
@@ -82,6 +85,9 @@
       </a>
       <a href="homework/week9/index.html" class="weeks__week">
         <h3>Week 9</h3>
+      </a>
+      <a href="homework/week10/index.html" class="weeks__week">
+        <h3>Week 10</h3>
       </a>
     </section>
     <script>
